--- a/views/addCard.ejs
+++ b/views/addCard.ejs
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
     <h1>Add New Business Card</h1>
-    <form action="/cards/save" method="POST">
+    <form action="/cards/upload" method="POST" enctype="multipart/form-data">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required><br>
 
@@ -24,7 +24,24 @@
 
         <label for="title">Title:</label>
         <input type="text" id="title" name="title" required><br>
-        <button type="submit">Save Card</button>
+
+        <label>Select Services</label>
+        <% if (services && services.length > 0) { %>
+            <% services.forEach(service => { %>
+                <label>
+                    <input type="checkbox" name="selectedServices" value="<%= service._id %>">
+                    <%= service.name %>
+                </label><br>
+            <% }) %>
+        <% } else{ %>
+            <p>No Services found</p>
+        <% } %>
+
+        <label for="image">Image:</label>
+        <input type="file" id="image" name="image"><br>
+        <label for="text">Text</label>
+        <input type="text" name="text"/>
+        <button type="submit">Upload Card</button>
     </form>
 </div>
 </body>
